# common-string

./: .gitignore  CMakeLists.txt  DataTypes.h  README.md  main.cpp
algorithm/: CommonStringFinder.cpp  CommonStringFinder.h  ExecutionTimeClock.cpp  ExecutionTimeClock.h
data/: RandomStringGenerator.cpp  RandomStringGenerator.h  StringSet.cpp  StringSet.h  generator_main.cpp
generator/: RandomStringGenerator.cpp  RandomStringGenerator.h
test_data/: n14m236.txt  n14m236evil.txt  n15m2500.txt  n15m255.txt  n5m8.txt
tests/: CommonStringFinderTest.cpp
